--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.74.6",
-    "@react-three/fiber": "^8.13.0",
     "aos": "^2.3.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "^12.0.4",
     "framer-motion": "^10.12.17",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "^0.153.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
