--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
     "framer-motion": "^10.12.17",
-    "next": "13.2.4",
+    "next": "^13.5.4",
+    "next-i18next": "^14.0.3",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
